# github-stats-analyser

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Justfile  LICENSE  README.md  action.yml  pyproject.toml  run.sh  sonar-project.properties
.github/: dependabot.yml  pull_request_template.md
.github/actions/local/: action.yml
.github/actions/setup-dependencies/: action.yml
.github/other-configurations/: labeller.yml  labels.yml
.github/release-please/: release-please-config.json
.github/super-linter-configurations/: .markdown-lint.yml
.github/workflows/: action-preview.yml  code-build.yml  code-checks.yml  code-quality.yml  code-test.yml  codeql-analysis.yml  dependency-review.yml  pull-request-checks.yml  pull-request-tasks.yml  release-package.yml  release-please.yml  release.yml  sync-labels.yml  version-check.yml
analyser/: __main__.py  catalogued_repository.py  statistics.py
analyser/commits/: commits.py
analyser/file_analysis/: programming_language_analysis.py  repository_analysis.py  repository_languages.py
analyser/file_analysis/tests/: test_programming_lanaguage_analysis.py  test_repository_analysis.py
analyser/tests/: test__main__.py  test_catalogued_repository.py  test_statistics.py
analyser/utils/: catalogued_repository.py  configuration.py  custom_logging.py  github_interactions.py  repository_actions.py
analyser/utils/tests/: test_catalogued_repository.py  test_custom_logging.py  test_github_interactions.py
docs/: SECURITY.md  conventional-commits.md
githooks/: post-commit  pre-commit
githooks/pre-commit-scripts/: gitleaks.sh  justfile.sh  prettier.sh  python.sh
python_scripts/: check_environment_variables.py
test/: test_output.sh
test/schema_validation/: .gitignore  repository_statistics_schema.json
